--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Tareq Hassan | Portfolio</title>
 </head>
 <body>
-    
+                        <!-- Navigation_section -->
+    <nav>
+        <ul>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a class="active" href="#about">About</a></li>
+        </ul>
+    </nav>
+
+
+                    <!----------- Section_1 -------------->
+
 </body>
 </html>
