--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
 
 
                     <!----------- Section_1 -------------->
-
+    <section class="section_1">
+        <div class=" half-width">
+            <h2>HELLO I'M</h2>
+            <H1 >TAREQ HASSAN</H1>
+            <p>A full stack allaround designer that placerat <br> in massa consectetur</p>
+            <a class="btn" href="">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="./images/do not use this pic.png" alt="">
+        </div>
+    </section>
+                    <!----------- Section_2 -------------->
+    <section class="section_2">
+        <div class="half-width">
+            <img src="./images/do not use this pic2.png" alt="">
+        </div>
+        <div class=" half-width">
+            <h2>About</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <a class="btn" href="">Hire Me</a>
+        </div>
+    </section>
 </body>
 </html>
