--- a/index.html
+++ b/index.html
@@ -38,8 +38,41 @@
         <div class=" half-width">
             <h2>About</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            <a class="btn" href="">Hire Me</a>
+            <a class="btn" href="">Download CV</a>
         </div>
     </section>
+                        <!----------- Section_3 -------------->
+    <section class="section_3">
+        <h2><span>LASTET </span>WORKING PROJECT</h2>
+        <div class="width33">
+            <img src="./images/image 4.png" alt="">
+            <h3>Power-x-gym (gym website)</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="width33">
+            <img src="./images/image 5.png" alt="">
+            <h3>Creative Agency</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="width33">
+            <img src="./images/image 8.png" alt="">
+            <h3>Hard Rock Music</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+    </section>
+                        <!----------- Section_4 -------------->
+    <footer class="section_4">
+        <div class="fd1">
+            <h2>Work Inquiry</h2>
+            <a class="btn" href="#">Let's Chat</a>
+        </div>
+        <div class="fd2">
+            <P>Stay connected</P>
+            <h2>tareqhassan2014@gmail.com</h2>
+            <img src="./images/image 6.png" alt="">
+            <img src="./images/Group 33059.png" alt="">
+            <img src="./images/image 7.png" alt="">
+        </div>
+    </footer>
 </body>
 </html>
