--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Tareq Hassan | Portfolio</title>
 </head>
 <body>
-                        <!-- Navigation_section -->
+
+
+    <!------------------------------------------ Navigation --------------------------------------->
+
     <nav>
         <ul>
             <li><a href="#contact">Contact</a></li>
@@ -18,55 +21,68 @@
     </nav>
 
 
-                    <!----------- Section_1 -------------->
+    <!------------------------------------------ Section_1 --------------------------------------->
+
+
     <section class="section_1">
-        <div class=" half-width">
-            <h2>HELLO I'M</h2>
-            <H1 >TAREQ HASSAN</H1>
+        <div class=" sec-div sec1div1">
+            <h2 class="text-color2">HELLO I'M</h2>
+            <H1 class="text-color1" >TAREQ HASSAN</H1>
             <p>A full stack allaround designer that placerat <br> in massa consectetur</p>
             <a class="btn" href="">Hire Me</a>
         </div>
-        <div class="half-width">
-            <img src="./images/do not use this pic.png" alt="">
+        <div class=" sec-div sec1div2">
+            <img src="./images/tareq1.jpg" alt="">
         </div>
     </section>
-                    <!----------- Section_2 -------------->
+
+
+
+    <!------------------------------------------ Section_2 --------------------------------------->
+
+
     <section class="section_2">
-        <div class="half-width">
-            <img src="./images/do not use this pic2.png" alt="">
+        <div class="sec2div1 sec-div">
+            <img src="./images/tareq2.jpg" alt="">
         </div>
-        <div class=" half-width">
+        <div class="sec2div2 sec-div">
             <h2>About</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             <a class="btn" href="">Download CV</a>
         </div>
     </section>
-                        <!----------- Section_3 -------------->
+
+
+    <!------------------------------------------ Section_3 --------------------------------------->
+
+
     <section class="section_3">
-        <h2><span>LASTET </span>WORKING PROJECT</h2>
-        <div class="width33">
+        <h2><span class="text-color1"> LASTET </span>WORKING PROJECT</h2>
+        <div class="sec3com sec3div1">
             <img src="./images/image 4.png" alt="">
             <h3>Power-x-gym (gym website)</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
-        <div class="width33">
+        <div class="sec3com">
             <img src="./images/image 5.png" alt="">
             <h3>Creative Agency</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
-        <div class="width33">
+        <div class="sec3com">
             <img src="./images/image 8.png" alt="">
             <h3>Hard Rock Music</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
     </section>
-                        <!----------- Section_4 -------------->
+
+    <!------------------------------------------ Footer --------------------------------------->
+
     <footer class="section_4">
-        <div class="fd1">
+        <div class="footerDiv1">
             <h2>Work Inquiry</h2>
             <a class="btn" href="#">Let's Chat</a>
         </div>
-        <div class="fd2">
+        <div class="footerDiv2">
             <P>Stay connected</P>
             <h2>tareqhassan2014@gmail.com</h2>
             <img src="./images/image 6.png" alt="">
@@ -74,5 +90,6 @@
             <img src="./images/image 7.png" alt="">
         </div>
     </footer>
+
 </body>
 </html>
