I have finished my project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <title>Tareq Hassan | Portfolio</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
     <nav>
         <ul>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#skills">Portfolio</a></li>
             <li><a href="#work">Work</a></li>
             <li><a class="active" href="#about">About</a></li>
         </ul>
@@ -26,8 +27,8 @@
 
     <section class="section_1">
         <div class=" sec-div sec1div1">
-            <h2 class="text-color2">HELLO I'M</h2>
-            <H1 class="text-color1" >TAREQ HASSAN</H1>
+            <h2 class="text-color1">HELLO I'M</h2>
+            <H1 class="text-color2" >TAREQ HASSAN</H1>
             <p>A full stack allaround designer that placerat <br> in massa consectetur</p>
             <a class="btn" href="">Hire Me</a>
         </div>
@@ -41,7 +42,7 @@
     <!------------------------------------------ Section_2 --------------------------------------->
 
 
-    <section class="section_2">
+    <section id="about" class="section_2">
         <div class="sec2div1 sec-div">
             <img src="./images/tareq2.jpg" alt="">
         </div>
@@ -56,8 +57,8 @@
     <!------------------------------------------ Section_3 --------------------------------------->
 
 
-    <section class="section_3">
-        <h2><span class="text-color1"> LASTET </span>WORKING PROJECT</h2>
+    <section id="work" class=" section_3">
+        <h2><span class="text-color2"> LASTET </span>WORKING PROJECT</h2>
         <div class="sec3com sec3div1">
             <img src="./images/image 4.png" alt="">
             <h3>Power-x-gym (gym website)</h3>
@@ -75,9 +76,49 @@
         </div>
     </section>
 
+
+<!------------------------------------------ Section_4 --------------------------------------->
+
+
+    <section id="skills">
+        <div class="skill-text">
+            <div class="skill-heading">
+                <h3 class="text-color2">MY SKILLS</h3>
+                <h2>My Experties</h2>
+            </div>
+            <div class="s-box-container">
+                <div class="skill-box">
+                    <div class="s-box-text">
+                        <strong>Hyper Text Markup Language<span class="text-color2" >(HTML)</span></strong>
+                        <p>I have 3 years experience in HTML and i completed 100+ HTML project.</p>
+                    </div>
+                </div>
+                <div class="skill-box">
+                    <div class="s-box-text">
+                        <strong>Cascading Style Sheets<span class="text-color2" >(CSS)</span></strong>
+                        <p>I have 3 years experience in CSS and i completed 100+ CSS project.</p>
+                    </div>
+                </div>
+                <div class="skill-box">
+                    <div class="s-box-text">
+                        <strong>JavaScript<span class="text-color2" >(JS)</span></strong>
+                        <p>I have 3 years experience in JavaScript and i completed 100+ Js project.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="skill-img">
+            <img src="images/skill2.png"/>	
+        </div>
+
+	</section>
+
+
+
     <!------------------------------------------ Footer --------------------------------------->
 
-    <footer class="section_4">
+    <footer id="contact" class="footSec">
         <div class="footerDiv1">
             <h2>Work Inquiry</h2>
             <a class="btn" href="#">Let's Chat</a>
